--- a/datatable-project/src/assets/styles/dataTable.css
+++ b/datatable-project/src/assets/styles/dataTable.css
@@ -1,4 +1,8 @@
 /*Styles for table*/
+.header{
+  font-family:'Lucida Sans';
+  text-decoration: underline;
+}
 table {
     width: 100%;
     border-collapse: collapse;
@@ -61,7 +65,7 @@ table {
 }
 
 .modal-content {
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 20px;
   border-radius: 4px;
   width: 400px;
@@ -80,14 +84,70 @@ table {
   margin: 10px 0 5px;
 }
 
-.modal-content form input,
-.modal-content form textarea {
+.modal-content form input{
   padding: 8px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
 
-.modal-content form button {
+.modal-content form textarea {
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  height: 100px;
+}
+
+.save-button {
   margin-top: 10px;
+  padding: 1px;
+  border: 1px solid #000000;
+  width: 100%;
+  height: 25px;
+  background-color: #00c932b6 ;
+  font-weight:bold;
+  opacity: 90%;
+  border-radius: 4px;
+}
+.save-button:hover {
+  background-color: #70f470; 
+}
+.cancel-button {
+  margin-top: 10px;
+  padding: 1px;
+  border: 1px solid #000000;
+  width: 100%;
+  height: 25px;
+  background-color: #ff0000b6 ;
+  font-weight:bold;
+  opacity: 90%;
+  border-radius: 4px;
+}
+.cancel-button:hover {
+  background-color: #f58888; 
+}
+
+/*styles for sort*/
+
+.select-container {
+  margin-bottom: 10px;
+}
+.sort-container {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+.sort-container span {
+  margin-right: 10px;
+  font-family:'Lucida Sans';
+  color: #0520ec;
+}
+.sort-container select {
+  margin-right: 10px;
+  background-color: #76bade;
+}
+.sort-container select option{
+  margin-right: 10px;
+  background-color: #76bade;
 }
